fixed h2 overflow issues

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -25,6 +25,7 @@
       width: 100%;
     }
     button {
+      transition: 0.5s;
       float: left;
       background-color: $grey;
       border-color: $grey;
