--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -41,7 +41,7 @@ h2 {
 
 //global button style
 button {
-  transition: 0.3s;
+  transition: 0.5s;
   font-size: 18px;
   width: 150px;
   padding: 15px 25px;
